--- a/pyscenic_r_import_analysis.Rmd
+++ b/pyscenic_r_import_analysis.Rmd
@@ -26,7 +26,9 @@ loom <- open_loom(pyScenicLoomFile, mode = "r")
 ```{r}
 # Read information from loom file:
 regulons_incidMat <- get_regulons(loom, column.attr.name='Regulons')
+#A list with tf and its target genes 
 regulons <- regulonsToGeneLists(regulons_incidMat)
+#Regulon activity across the cells 
 regulonAUC <- get_regulons_AUC(loom, column.attr.name='RegulonsAUC')
 regulonsAucThresholds <- get_regulon_thresholds(loom)
 #embeddings <- get_embeddings(loom)
@@ -35,8 +37,9 @@ regulonsAucThresholds <- get_regulon_thresholds(loom)
 
 
 ```{r}
+#Get the expression matrix that is used to compute AUC 
 exprMat <- get_dgem(loom)
-cellInfo <- get_cell_annotation(loom)
+#cellInfo <- get_cell_annotation(loom)
 #clusterings <- get_clusterings_with_name(loom)
 ```
 
@@ -73,6 +76,352 @@ ComplexHeatmap::Heatmap(regulonActivity_byCellType_Scaled,
                         column_names_gp = grid::gpar(fontsize = 7)
                         )
 ```
+
+
+
+
+#Function to subset on specific cell type and compare between "WT" vs "DNMT3A" and "TET2"
+```{r}
+Find_diff_TFs <- function(celltype) {
+  
+  #celltypes <- cellInfo$seurat_clusters
+  
+  #Have this huge matrix with all cells vs the 266 TFs at an individual level 
+  regulonActivity_by_indcells <- getAUC((regulonAUC))
+  tfs <- names(regulons)
+  
+  #Subset for celltype 
+  cellInfo_celltype <- cellInfo[cellInfo$seurat_clusters == celltype,]
+  selected_cols <- intersect(colnames(regulonActivity_by_indcells),rownames(cellInfo_celltype))
+  regulonActivity_celltype <- regulonActivity_by_indcells[,selected_cols] %>%
+                              t()
+
+  combined_ann_tf <- merge(as.data.frame(regulonActivity_celltype), 
+                          cellInfo_celltype, by = "row.names", 
+                          all.x = TRUE)
+  
+  tf_wt_tet2 <- combined_ann_tf %>%
+               filter(genotype == "wt_45_1" | 
+               genotype == "tet2_45_2")
+
+  wt_data <- tf_wt_tet2 %>%
+             filter(genotype == "wt_45_1") %>%
+             select(all_of(tfs))
+  
+  tet2_data <- tf_wt_tet2 %>%
+               filter(genotype == "tet2_45_2") %>%
+               select(all_of(tfs))
+  
+  diffexptf_wt_tet2 <- c()
+  log2_fc_tf_tet2 <- c()
+  for (tf in tfs) {
+    p_val_tf <- wilcox.test(wt_data[,tf],tet2_data[,tf],paired = FALSE)$p.value
+    diffexptf_wt_tet2[tf] <- p_val_tf
+    median_wt <- median(wt_data[,tf])
+    median_tet2 <- median(tet2_data[,tf])
+    comp_median <- (median_tet2/median_wt)
+    foldchange_auc <- log2((abs(comp_median))^(sign(comp_median)))
+    log2_fc_tf_tet2[tf] <- foldchange_auc
+    }
+  
+  diffexptf_wt_tet2 <- diffexptf_wt_tet2 %>% 
+                       as.data.frame() %>%
+                       rename({{ celltype }} := ".")
+  
+  log2_fc_tf_tet2 <- log2_fc_tf_tet2 %>% 
+                       as.data.frame() %>%
+                       rename({{ celltype }} := ".")
+  
+  ##Now the comparission for wt vs dnmt3a 
+  tf_wt_dnmt3a <- combined_ann_tf %>%
+               filter(genotype == "wt_45_1" | 
+               genotype == "dnmt3a_45_2")
+  
+  wt_data <- tf_wt_dnmt3a %>%
+             filter(genotype == "wt_45_1") %>%
+             select(all_of(tfs))
+  
+  dnmt3a_data <- tf_wt_dnmt3a %>%
+               filter(genotype == "dnmt3a_45_2") %>%
+               select(all_of(tfs))
+
+  diffexptf_wt_dnmt3a <- c()
+  log2_fc_tf_dnmt3a <- c()
+  for (tf in tfs) {
+    p_val_tf <- wilcox.test(wt_data[,tf],dnmt3a_data[,tf],paired = FALSE)$p.value
+    median_wt <- median(wt_data[,tf])
+    median_dnmt3a <- median(dnmt3a_data[,tf])
+    comp_median <- (median_dnmt3a/median_wt)
+    foldchange_auc <- log2((abs(comp_median))^(sign(comp_median)))
+    diffexptf_wt_dnmt3a[tf] <- p_val_tf
+    log2_fc_tf_dnmt3a[tf] <- foldchange_auc
+    }
+  diffexptf_wt_dnmt3a <- diffexptf_wt_dnmt3a %>% 
+                         as.data.frame() %>%
+                         rename({{ celltype }} := ".")
+  
+   log2_fc_tf_dnmt3a <- log2_fc_tf_dnmt3a %>% 
+                       as.data.frame() %>%
+                       rename({{ celltype }} := ".")
+  
+  return(list(diffexptf_wt_tet2 = diffexptf_wt_tet2,log2_fc_tf_tet2 = log2_fc_tf_tet2, 
+              diffexptf_wt_dnmt3a = diffexptf_wt_dnmt3a,log2_fc_tf_dnmt3a=log2_fc_tf_dnmt3a))
+}
+```
+
+#Find significant p-vals
+```{r}
+#Note to use the -log10 transformed matrix 
+sig_Tfs <- function(df, threshold = 1.3) {
+  sig_tfs <- list()
+  for (col_name in colnames(df)) {
+    # Get the row names where the value is greater than the threshold for each column
+    selected_rows <- rownames(df)[df[, col_name] > threshold]
+    # Store the result in the list
+    sig_tfs[[col_name]] <- selected_rows
+  }
+  return(result_list)
+  }
+```
+
+
+
+
+```{r}
+celltypes <- levels(cellInfo$seurat_clusters) 
+
+#In order to run this function : regulonAUC, regulons and tfs must be defined 
+
+p_val_all <- lapply(celltypes,Find_diff_TFs) #Warnings are for vascular fibroblasts 
+names(p_val_all) <- celltypes
+
+```
+
+
+```{r}
+# Extract all first data frames from each pair which are comparissions between 
+#wt vs tet2
+wt_tet2_pval <- lapply(p_val_all, function(pair) pair[[1]])
+
+# Use do.call and cbind to bind all first data frames together
+wt_tet2_pval <- do.call(cbind, wt_tet2_pval) %>% 
+                as.data.frame()
+```
+
+
+```{r}
+wt_tet2_fc <- lapply(p_val_all, function(pair) pair[[2]])
+wt_tet2_fc <- do.call(cbind, wt_tet2_fc) %>% 
+                as.data.frame()
+
+#Only for resident like macrophages between wt vs tet2 : 
+df_macs <- cbind(wt_tet2_pval$`Resident-like Macrophages`,
+                 wt_tet2_fc$`Resident-like Macrophages`) %>%
+            as.data.frame() %>%
+            rename(p_val = "V1",
+                   log2fc = "V2") %>%
+            mutate(p_adj = p.adjust(p_val,method = "BH")) %>%
+            mutate(y= -log10(p_adj)) %>%
+            mutate(y = pmin(y, 20))
+
+
+df_macs$log2fc <- ifelse(df_macs$log2fc > 0.25, 0.25,
+                  ifelse(df_macs$log2fc < -0.25, -0.25,
+                         df_macs$log2fc))
+
+
+row.names(df_macs) <- rownames(wt_tet2_pval)
+
+
+# add a column of NAs
+df_macs$diffexpressed <- "NO"
+# if log2Foldchange > 0.6 and pvalue < 0.05, set as "UP" 
+df_macs$diffexpressed[df_macs$log2fc > 0.05 & df_macs$y >= 10] <- "UP"
+# if log2Foldchange < -0.6 and pvalue < 0.05, set as "DOWN"
+df_macs$diffexpressed[df_macs$log2fc < -0.05 & df_macs$y >= 10] <- "DOWN"
+
+
+
+# Create a new column "delabel" to de, that will contain the name of genes differentially expressed (NA in case they are not)
+df_macs$delabel <- NA
+df_macs$delabel[df_macs$diffexpressed != "NO"] <- rownames(df_macs[df_macs$diffexpressed != "NO",])
+
+
+
+
+ggplot(data=df_macs, aes(x=log2fc, y= y, col=diffexpressed,
+                         label = delabel))+ 
+    geom_point() + 
+    theme_minimal()+
+    geom_text()
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+```{r}
+small_constant <- 1e-300
+wt_tet2_pval_log <- wt_tet2_pval %>%
+                    mutate_all(~ -log10(. + small_constant))
+
+wt_tet2_pval_log_scale <- scale(wt_tet2_pval_log, center = T, scale=T)
+```
+
+
+
+
+```{r}
+# Extract all second data frames from each pair which are comparissions between 
+#wt vs dnmt3a
+wt_dnmt3a_pval <- lapply(p_val_all, function(pair) pair[[2]])
+
+# Use do.call and cbind to bind all second data frames together
+wt_dnmt3a_pval <- do.call(cbind, wt_dnmt3a_pval)
+```
+
+
+```{r}
+p_val_wt_tet2_scale <- t(scale(t(wt_tet2_pval), center = T, scale=T))
+
+ComplexHeatmap::Heatmap(wt_tet2_pval, 
+                        name="p-val : wt vs tet2",
+                        row_names_gp = grid::gpar(fontsize = 7))
+#Be careful about scaling and centering the data
+
+ComplexHeatmap::Heatmap(p_val_wt_tet2_scale, 
+                        name="log10(p-value) : wt vs tet2",
+                        #row_names_gp = grid::gpar(fontsize = 8),
+                        column_names_gp = grid::gpar(fontsize = 7)
+                        )
+```
+
+
+```{r}
+p_val_wt_tet2_scale %>%
+  as.data.frame() %>%
+  ggplot()+
+  aes(x = p_val_wt_tet2_scale$`Resident-like Macrophages`) +
+  geom_histogram(bins = 50)
+```
+
+
+
+```{r}
+p_val_wt_tet2_scale <-  p_val_wt_tet2_scale %>% as.data.frame()
+tfs_res_sig <- p_val_wt_tet2_scale[p_val_wt_tet2_scale$`Resident-like Macrophages` <= -2,]
+```
+
+
+
+
+
+
+
+
+
+##Write another function to plot TF distribution of AUC across the conditions 
+#WT vs DNMT3A or WT vs TET2
+
+
+
+
+
+
+#WT vs TET2
+```{r}
+mean_Jun <- combined_ann_Jun %>%
+         filter(mutation == "wt" | 
+         mutation == "tet2") %>%
+         group_by(mutation) %>%
+         summarize(mean = mean(Jun))
+
+combined_ann_Jun %>%
+  filter(mutation == "wt" | 
+         mutation == "tet2") %>%
+  ggplot(aes(x = Jun, fill = mutation)) +
+  #geom_histogram(aes(y = ..density..), alpha = 0.5, position = "identity", bins = 30) +
+  geom_density(alpha = 0.5) +
+  geom_vline(data = mean_Jun, aes(xintercept = mean, color = mutation),
+             linetype = "dashed")+
+  labs(title = "Density Plot by wt vs tet2", x = "Jun(+)", y = "Density") +
+  theme_minimal()
+  #scale_fill_viridis_d()
+ 
+```
+
+
+
+
+
+
+#Find target genes of Jun between Wt and tet2 
+```{r}
+target_genes_Jun <- regulons$`Jun(+)`
+rdaDir <- ("./data/week30/rda/")
+load(file = paste0(rdaDir,"merged_seurat_harmony.rda"))
+library(Seurat)
+features = target_genes_Jun[100:111]
+res_macs_seurat <- subset(merged_seurat_harmony,
+                          seurat_clusters == "Resident-like Macrophages" &
+                          (genotype =="wt_45_1"| genotype =="tet2_45_2"))
+
+VlnPlot(res_macs_seurat, features = features,split.by = "genotype")
+
+
+```
+
+
+
+```{r}
+VlnPlot(res_macs_seurat, features = "Selenbp1",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Egr2",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Klf2",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Lyl1",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Maf",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Egr2",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Irf1",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Xbp1",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Ifi47",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Fam46a",split.by = "genotype")
+VlnPlot(res_macs_seurat, features = "Klf2",split.by = "genotype")
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ##Subset on cell types and compare wild type vs mutant  
 ```{r}
@@ -528,12 +877,19 @@ DimPlot(merged_seurat_harmony, reduction = "umap", label = T,label.size = 2)
 
 
 
+#Resident-like Macrophages 
+```{r}
+res_macs_fc <- p_val_all[["Resident-like Macrophages"]][["log2_fc_tf_dnmt3a"]][["Resident-like Macrophages"]]%>% as.matrix()
+```
 
 
-
-
-
-
+```{r}
+wt_data[] <- lapply(wt_data, function(col) {
+  min_after_zero <- min(col[which(col > 0)])
+  col[col == 0] <- min_after_zero
+  return(col)
+})
+```
 
 
 
